[mfi] clean up